Cambio de Daniela
Sección mision

--- a/Sprint Grupal 1/index.html
+++ b/Sprint Grupal 1/index.html
@@ -24,6 +24,7 @@
         <div class="container">
             <h1>Nuestra empresa</h1>
             <p>Fundada en 1988, cuenta con vasta experiencia en el rubro aseo. Son más de 30 años, dedicados al aseo de oficinas, aseo de empresas, aseo industrial y aseo de tipo especial o situacional. Nos ocupamos que la historia sea aval frente al cliente. Desarrollamos un servicio de calidad, bien estructurado, serio y de alto rigor en el cumpliento de normas y estándares en aseo de oficinas, aseo industrial y aseo especial.</p>
+            <p>Cambio de Daniela</p>
             <h2>Misión</h2>
             <p>Brindar un servicio personalizado, de calidad, eficiente y confiable que supere las expectativas de nuestros clientes, siendo respetuosos del medio ambiente y aportando de manera importante con el desarrollo de la comunidad y nuestros trabajadores.</p>
             <h2>Visión</h2>
