--- a/Sprint Grupal 1/index.html
+++ b/Sprint Grupal 1/index.html
@@ -23,6 +23,7 @@
     <main class="main">
         <div class="container">
             <h1>Nuestra empresa</h1>
+            <p><u>Cambio Juan Gutierrez</u></p>
             <p>Fundada en 1988, cuenta con vasta experiencia en el rubro aseo. Son más de 30 años, dedicados al aseo de oficinas, aseo de empresas, aseo industrial y aseo de tipo especial o situacional. Nos ocupamos que la historia sea aval frente al cliente. Desarrollamos un servicio de calidad, bien estructurado, serio y de alto rigor en el cumpliento de normas y estándares en aseo de oficinas, aseo industrial y aseo especial.</p>
             <p>Cambio de Daniela</p>
             <h2>Misión</h2>
