--- a/Sprint Grupal 1/index.html
+++ b/Sprint Grupal 1/index.html
@@ -28,7 +28,7 @@
             <p>Cambio de Daniela</p>
             <h2>Misión</h2>
             <p>Brindar un servicio personalizado, de calidad, eficiente y confiable que supere las expectativas de nuestros clientes, siendo respetuosos del medio ambiente y aportando de manera importante con el desarrollo de la comunidad y nuestros trabajadores.</p>
-            <h2>Visión</h2>
+            <h2>CAMBIO NEIFER</h2>
             <p>Ser una empresa de clase mundial, reconocida por sus clientes por la calidad de sus servicios, con marcas de alta preferencia gracias a la cercanía con sus clientes, sustentado por un equipo humano de excelencia y conductas éticas íntegras.</p>
         </div>
     </main>
