--- a/Sprint Grupal 1/index.html
+++ b/Sprint Grupal 1/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./sources/css/estilo.css">
 </head>
-<body>
+<body class="hola">
     <header class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
         <div class="container logo-nav-container">
             <a class="logo">Supreme Clean</a>
